--- a/TODO.txt
+++ b/TODO.txt
@@ -2,9 +2,9 @@ CHECKLIST: ([>] - in progress, [x] - done, [%] - cancelled, [?] - contingency)
 [x] Derisk Flask app
 [x] Establish git repo, project structure, setup.py
 [x] Create or obtain test files
-[ ] Log scan scheduler
-[ ] Establish summary format
+[x] Log scan scheduler
+[x] Establish summary format
 [ ] Front end HTML and styling
-[ ] Specialise summaries for each log format
+[?] Specialise summaries for each log format
 [ ] Package for Windows
 [ ] Acceptance test on Windows 2000
