Mods to entry points, module names, version, and TODO list

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@ CHECKLIST: ([>] - in progress, [x] - done, [%] - cancelled, [?] - contingency)
 [x] Create or obtain test files
 [x] Log scan scheduler
 [x] Establish summary format
-[ ] Front end HTML and styling
+[x] Front end HTML and styling
 [?] Specialise summaries for each log format
 [ ] Package for Windows
 [ ] Acceptance test on Windows 2000
